<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    
    <item android:id="@+id/actionbar_menu_visibility"
        android:icon="@drawable/social_person"
        android:title="@string/menu_userprofile_visibility"
        android:orderInCategory="1"
        android:showAsAction="never" />
    
    <item android:id="@+id/actionbar_menu_help"
        android:icon="@drawable/action_help"
        android:title="@string/menu_userprofile_help"
        android:orderInCategory="2"
        android:showAsAction="never" />
	
    <item android:id="@+id/actionbar_menu_logout"
        android:icon="@drawable/device_access_not_secure"
        android:title="@string/menu_userprofile_logout"
        android:orderInCategory="3"
        android:showAsAction="never" />
    
	<item android:id="@+id/actionbar_track"
          android:icon="@drawable/location_map"
          android:title="@string/actionbar_track"
          android:orderInCategory="2"
          android:showAsAction="always"/>
	
	<item android:id="@+id/actionbar_starttracking"
          android:icon="@drawable/av_play"
          android:title="@string/actionbar_starttracking"
          android:orderInCategory="4"
          android:showAsAction="always"/>
	
	<item android:id="@+id/actionbar_notification"
          android:icon="@drawable/content_event"
          android:title="@string/actionbar_notification"
          android:orderInCategory="1"
          android:showAsAction="always"/>
	
	<item android:id="@+id/actionbar_friends"
          android:icon="@drawable/social_group"
          android:title="@string/actionbar_friends"
          android:orderInCategory="3"
          android:showAsAction="always"/>
	
	<item android:id="@+id/actionbar_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/actionbar_search"
          android:orderInCategory="4"
          android:showAsAction="always"
          android:visible="true"/>
    
</menu>
