<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <EditText
        android:id="@+id/insert_position"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <LinearLayout 
          android:orientation="horizontal"
          android:gravity="right"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          >
       <TextView 
           android:id="@+id/actual_position"
           android:text="@string/actual_position"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       <CheckBox 
        	android:layout_marginRight="10dp"
        	android:id="@+id/checkbox_actual_position"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/range"
        />
    <EditText
        android:id="@+id/insert_range"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />
    <TextView 
           android:id="@+id/visibility_friends"
           android:text="@string/visibility_friends"
           android:layout_width="wrap_content"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"/>
     <LinearLayout 
          android:orientation="horizontal"
          android:gravity="left"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          >
      <CheckBox 
        	android:layout_marginRight="10dp"
        	android:id="@+id/checkbox_visibility_friends"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:checked="true"/>
       <TextView 
           android:id="@+id/only_connect_friends"
           android:text="@string/only_connect_friends"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
   </LinearLayout>
   <Button
        android:id="@+id/save_filter_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
       ></Button>
</LinearLayout>